# pinchana-threads

./: Dockerfile  README.md  pyproject.toml
src/pinchana_threads/: __init__.py  main.py  scraper.py
tests/: test_scraper.py
