[project]
name = "pinchana-threads"
version = "0.1.0"
description = "Threads (Meta) scraper plugin for Pinchana"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pinchana-core",
    "curl-cffi>=0.7.0",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
pinchana-core = { path = "../pinchana-core" }

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
