[project]
name = "pinchana-threads"
version = "0.2b0"
description = "Threads (Meta) scraper plugin for Pinchana"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pinchana-core",
    "cloakbrowser>=0.4.5",
    "curl-cffi>=0.15.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.uv.sources]
pinchana-core = { path = "../pinchana-core" }

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
